trunk/yanl/examples/t1/fail/while_invalid.yanl
# Expresia conditionala de la while trebuie sa fie de tip boolean

program dude;
var a,b,c:integer;

function t(u:boolean):real
begin
  t := 3.14;
end;

function f(x,y,z:integer):boolean
begin
   if (x*x + y*y + z*z) > 0 then
			   f := false
			else
			   f := true;
end;

function g(x:integer):integer
begin
 g:=x+1;
end;

function h(x:integer):integer
begin
 h:=x-1;
end;

begin
  writestring("a="); a:=readinteger;
		writestring("b="); b:=readinteger;
		writestring("c="); c:=readinteger;
		while (t(f(a,b,c))) do
		begin
		  writestring("hmmm...");
		end;
end.